@@ -412,6 +412,9 @@ Improvements
 * SOLR-16397: Reload core v2 endpoints have been updated to be more REST-ful.
   RELOAD is now available at `POST /api/cores/coreName/reload` (Sanjay Dutt via Jason Gerlowski)
 
+* SOLR-16397: Unload core v2 endpoints have been updated to be more REST-ful.
+  UNLOAD is now available at `POST /api/cores/coreName/unload` (Sanjay Dutt via Jason Gerlowski)
+
 Optimizations
 ---------------------
 
